# qtactiveqt

./: .gitattributes  .gitignore  .prev_CMakeLists.txt  .qmake.conf  CMakeLists.txt  conanfile.py  dependencies.yaml  project.config  qtactiveqt.pro  sync.profile
coin/: module_config.yaml
doc/src/: activeqt-container.qdoc  activeqt-server.qdoc  activeqt.qdoc
doc/src/examples/: comapp.qdoc  dotnet.qdoc  hierarchy-demo-snippet.qdoc  hierarchy.qdoc  menus.qdoc  multiple.qdoc  opengl.qdoc  qutlook.qdoc  simple.qdoc  webbrowser.qdoc  wrapper.qdoc
doc/src/snippets/code/: doc_src_examples_activeqt_comapp.qdoc  doc_src_examples_activeqt_dotnet.qdoc  doc_src_examples_activeqt_menus.qdoc  doc_src_qaxcontainer.pro  doc_src_qaxserver.cpp  doc_src_qaxserver.pro  doc_src_qaxserver.qdoc  src_activeqt_container_qaxbase.cpp  (+3 more)
examples/: CMakeLists.txt
examples/activeqt/: .prev_CMakeLists.txt  CMakeLists.txt  README  activeqt.pro
examples/activeqt/comapp/: CMakeLists.txt  comapp.pro  main.cpp
examples/activeqt/hierarchy/: CMakeLists.txt  hierarchy.pro  hierarchy.rc  main.cpp  objects.cpp  objects.h
examples/activeqt/hierarchy/doc/src/: hierarchy.qdoc
examples/activeqt/mediaplayer/: CMakeLists.txt  main.cpp  mediaaxwidget.h
examples/activeqt/menus/: CMakeLists.txt  main.cpp  menus.cpp  menus.h  menus.pro  menus.rc
examples/activeqt/multiple/: CMakeLists.txt  ax1.h  ax2.h  main.cpp  multiple.pro  multipleax.rc
examples/activeqt/multiple/doc/src/: multiple.qdoc
examples/activeqt/opengl/: CMakeLists.txt  glbox.cpp  glbox.h  globjwin.cpp  globjwin.h  main.cpp  opengl.pro  opengl.rc
examples/activeqt/opengl/doc/src/: opengl.qdoc
examples/activeqt/qutlook/: CMakeLists.txt  addressview.cpp  addressview.h  main.cpp  qutlook.pro
examples/activeqt/simple/: CMakeLists.txt  main.cpp  simple.pro  simple.rc
examples/activeqt/simpleqml/: CMakeLists.txt  main.cpp
examples/activeqt/webbrowser/: main.cpp  mainwindow.ui  webaxwidget.h  webbrowser.pro  webbrowser.qrc
examples/activeqt/wrapper/: CMakeLists.txt  main.cpp  wrapper.pro  wrapperax.rc
modules/: qt_activeqt.pri
src/: CMakeLists.txt  src.pro
src/activeqt/: .prev_CMakeLists.txt  CMakeLists.txt  activeqt.pro  activeqtversion.h  axshared.pro  axshared.prx
src/activeqt/axbase/: CMakeLists.txt  axbase.pro  qaxtypefunctions.cpp  qaxtypefunctions_p.h  qaxutils.cpp  qaxutils_p.h  qbstr_p.h
src/activeqt/container/: CMakeLists.txt  Qt6AxContainerMacros.cmake  container.pro  filterwidget.cpp  filterwidget_p.h  qaxbase.cpp  qaxbase.h  qaxbase_p.h  qaxdump.cpp  qaxobject.cpp  qaxobject.h  qaxobject_p.h  qaxobjectinterface.h  qaxobjectinterface.qdoc  qaxscript.cpp  qaxscript.h  qaxscriptwrapper.cpp  qaxselect.cpp  qaxselect.h  qaxselect.ui  qaxwidget.cpp  qaxwidget.h  qaxwidget_p.h
src/activeqt/control/: CMakeLists.txt  Qt6AxServerMacros.cmake  control.pro  qaxaggregated.cpp  qaxaggregated.h  qaxbindable.cpp  qaxbindable.h  qaxfactory.cpp  qaxfactory.h  qaxmain.cpp  qaxserver.cpp  qaxserverbase.cpp  qaxserverdll.cpp  qaxservermain.cpp  qclassfactory_p.h
src/activeqt/doc/: ActiveQtDoc  CMakeLists.txt  activeqt.qdocconf
src/activeqt/doc/snippets/: doc_src_activeqt-dumpcpp.cpp  doc_src_examples_activeqt_dotnet.qdoc  doc_src_qaxcontainer.pro  doc_src_qaxserver.cpp  doc_src_qaxserver.pro  doc_src_qaxserver.qdoc  qtactive-module-use.qdocinc  src_activeqt_container_qaxbase.cpp  src_activeqt_container_qaxscript.cpp  src_activeqt_container_qaxselect.cpp  src_activeqt_control_qaxbindable.cpp  src_activeqt_control_qaxfactory.cpp
src/activeqt/doc/src/: activeqt-dumpcpp.qdoc  activeqt-dumpdoc.qdoc  activeqt-index.qdoc  qctiveqt-toc.qdoc  qtaxcontainer.qdoc  qtaxserver.qdoc
src/activeqt/doc/src/examples/: comapp.qdoc  dotnet.qdoc  hierarchy.qdoc  menus.qdoc  multiple-demo.qdocinc  multiple.qdoc  opengl.qdoc  simple-demo.qdocinc  wrapper.qdoc
src/activeqt/doc/src/snippets/code/: doc_src_qaxcontainer.pro  doc_src_qaxserver.pro  src_activeqt_container_qaxselect.cpp
src/activeqt/shared/: qaxtypefunctions.cpp  qaxtypefunctions.h  qaxtypes.cpp  qaxtypes.h  qaxtypes_p.h  qaxutils.cpp  qaxutils_p.h
src/tools/: CMakeLists.txt
src/tools/idc/: .prev_CMakeLists.txt  CMakeLists.txt  idc.pro  main.cpp
tests/auto/: CMakeLists.txt  auto.pro
tests/auto/cmake/: CMakeLists.txt
tests/auto/cmake/test_modules/container/: CMakeLists.txt  axcontainer.cpp
tests/auto/cmake/test_modules/server/: CMakeLists.txt  axserver.cpp
tests/auto/conversion/: CMakeLists.txt  comutil_p.h  testutil_p.h  tst_conversion.cpp
tests/auto/dumpcpp/: CMakeLists.txt  dumpcpp.pro  tst_dumpcpp.cpp
tests/auto/qaxobject/: CMakeLists.txt  qaxobject.pro  tst_qaxobject.cpp
tests/auto/qaxobjectcom/: CMakeLists.txt  tst_qaxobjectcom.cpp  tst_qaxobjectcom.exe.manifest.in
tests/auto/qaxobjectcom/testserver/: CMakeLists.txt  testserver.cpp  testserver.def  testserver.h  testserver.rc  testserverlib.idl
tests/auto/qaxscript/: CMakeLists.txt  tst_qaxscript.cpp
tests/auto/qaxscriptmanager/: tst_qaxscriptmanager.cpp
tests/auto/qbstr/: CMakeLists.txt  tst_qbstr.cpp
tests/manual/: CMakeLists.txt
tests/manual/axviewer/: .prev_CMakeLists.txt  CMakeLists.txt  main.cpp
tests/manual/dumpcpp/: CMakeLists.txt  main.cpp
tests/manual/shared/: metaobjectdump.cpp
tests/manual/testcontrol/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  tools.pro
tools/dumpcpp/: .prev_CMakeLists.txt  CMakeLists.txt  dumpcpp.pro  main.cpp  moc.cpp  moc.h
tools/dumpdoc/: .prev_CMakeLists.txt  CMakeLists.txt  dumpdoc.pro  main.cpp
tools/idc/: idc.pro  main.cpp
tools/testcon/: .prev_CMakeLists.txt  CMakeLists.txt  ambientproperties.cpp  ambientproperties.h  ambientproperties.ui  changeproperties.cpp  changeproperties.h  changeproperties.ui  controlinfo.cpp  controlinfo.h  controlinfo.ui  docuwindow.cpp  docuwindow.h  invokemethod.cpp  invokemethod.h  invokemethod.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sandboxing.cpp  sandboxing.h  testcon.pro
tools/testcon/scripts/: perlscript.pl  pythonscript.py
(+25 files in other folders)
